Tehty vaikka mitä

--- a/index.html
+++ b/index.html
@@ -7,11 +7,24 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Vinttikoira Klikkauspeli</h1>
-    <p>Pisteet: <span id="score">0</span></p>
+    <h1></h1>
+    <p><span id="score">0</span></p>
 
+    <!-- Keskellä oleva kuva -->
     <div id="dog-container">
-        <img src="images/vinttikoirajuoksee.jpg" id="dog" alt="Vinttikoira">
+        <img src="images/ensio.jpg" id="dog" alt="Vinttikoira Ensio">
+    </div>
+
+    <!-- Räjähdyselementti -->
+    <div id="explosion"></div>
+
+    <!-- Oikean reunan napit -->
+    <div class="sidebar">
+        <div class="button">Nappi 1</div>
+        <div class="button">Nappi 2</div>
+        <div class="button">Nappi 3</div>
+        <div class="button">Nappi 4</div>
+        <div class="button">Nappi 5</div>
     </div>
 
     <script src="script.js"></script>
