--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
     <!-- Räjähdyselementti -->
     <div id="explosion"></div>
 
+    <!-- Nakin kuva -->
+    <div id="sausage" class="hidden">
+        <img src="images/sausage.jpg" alt="Nakki">
+    </div>
+
     <!-- Oikean reunan napit -->
     <div class="sidebar">
-        <div class="button">Nappi 1</div>
-        <div class="button">Nappi 2</div>
-        <div class="button">Nappi 3</div>
-        <div class="button">Nappi 4</div>
-        <div class="button">Nappi 5</div>
+        <div class="button">Automaattikursori (500 klikkausta)</div>
+        <div class="button">Energianamit (10000 klikkausta)</div>
+        <div class="button">Tähän jotain</div>
+        <div class="button">Tähän jotain</div>
+        <div class="button">Tähän jotain</div>
+        <div class="button reset-button">Nollaa pisteet</div>
     </div>
 
     <script src="script.js"></script>
